--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,6 @@
 html{
     scroll-behavior: smooth;
 }
-body{
-    font-family: 'Fredoka','sans-serif';
-}
+body {
+    font-family: 'Poppins', sans-serif;
+  }
